--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,7 +4,7 @@
 
         <h1>Kontestator</h1>
 
-        <p>Little example of use of Akka persistence @@DevoxxFr</p>
+        <p>Little example of use of Akka persistence @@DevoxxFr - <a href="@routes.Projection.csv()">  CSV</a></p>
 
         <h2>User :</h2>
 
