--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,7 +4,7 @@
 
         <h1>Kontestator</h1>
 
-        <p>Little example of use of Akka persistence @@DevoxxFr - <a href="@routes.Projection.csv()">  CSV</a></p>
+        <p>Little example of use of Akka persistence @@DevoxxFr </p>
 
         <h2>User :</h2>
 
@@ -32,4 +32,5 @@
                 <li>Remove participants</li>
                 <li>Get users</li>
             </ul>
+        <p><a href="@routes.Projection.csv()"> Download CSV</a> </p>
     }
